--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: OnlyFatness
-subtitle: You came for the beer stayed for the fatness.
+subtitle: You came for the beer, but stayed for the fatness.
 ---
