--- a/index.html
+++ b/index.html
@@ -3,3 +3,6 @@ layout: home
 title: OnlyFatness
 subtitle: You came for the fatness, but stayed for a beer.
 ---
+$(document).ready(function(){
+  $('#link_other a').attr('target', '_blank');
+});
